# DeepInfraThroughputTest

./: .gitignore  README.md  cost_estimate_analysis.py  deepinfra_test.py  grid_results.csv  locustfile_deepinfra.py  locustfile_images.py  locustfile_phoenix.py  locustfile_phoenix_4b.py  locustfile_text.py  locustfile_text_fixed.py  main.py  parameter_analysis.ipynb  pyproject.toml  sanity_check.ipynb  sanity_check_deepinfra.ipynb  sanity_check_kvant.ipynb  sanity_check_kvant_4b.ipynb  throughput_deepinfra.py  throughput_exploration.ipynb  throughput_phoenix.py  throughput_phoenix_vs_deepinfra_report_gen.ipynb  throughput_self_host.py  viz_server.py
sample_requests/: 2.json  5.json  api-req1.json  api-req2.json  api-req3.json  simple_request.json
