[project]
name = "deepinfrathroughputtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groundx>=2.4.0",
    "locust>=2.40.5",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]
